--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,19 @@
+py-tgcalls==2.2.8
+watchdog
+aiofiles
+aiohttp
+ffmpeg
 telethon
+orjson
+httpx
+requests
+psutil
+speech_recognition
+fake_useragent
+pydub
+BeautifulSoup
+tempfile
+arabic_reshaper
+python-bidi
+nest_asyncio
+aiosqlite
