--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,3 @@
-py-tgcalls==2.2.8
-watchdog
-aiofiles
-aiohttp
-telethon
-orjson
-httpx
-requests
-psutil
-fake_useragent
-pydub
-BeautifulSoup
-tempfile
-arabic_reshaper
-python-bidi
-nest_asyncio
-
-aiosqlite
-
+Flask==2.3.3
+flask-cors==4.0.0
+telethon==1.34.0
